--- a/index.html
+++ b/index.html
@@ -12,8 +12,471 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <!-- font awesome link -->
+    <script
+      src="https://kit.fontawesome.com/8e3b9fa0a3.js"
+      crossorigin="anonymous"
+    ></script>
+    <!-- coustom css -->
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container">
+          <a class="navbar-brand" href="#">Navbar</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Features</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Pricing</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <!-- banner section -->
+      <section class="container py-5 text-white">
+        <div class="row align-items-center">
+          <div class="col-sm-12 col-md-6 col-lg-6">
+            <span class="span-font-size">
+              Computer-controlled digital transistorized with electronic advance
+            </span>
+            <h1 class="my-4">Honda CBR 300R</h1>
+            <p>
+              In October 2013 the longer-stroke CBR300R was announced at the
+              China International Motorcycle Trade Exhibition in Chongqing, with
+              engine displacement increased from 249.6 to 286 cc (15.23 to 17.45
+              cu in) in response to Kawasaki's Ninja 300.
+            </p>
+            <button
+              type="button"
+              class="btn px-5 py-2 link-btn text-white my-3"
+              data-bs-toggle="modal"
+              data-bs-target="#exampleModal"
+            >
+              Purchase
+            </button>
+            <!-- Modal -->
+            <div
+              class="modal fade"
+              id="exampleModal"
+              tabindex="-1"
+              aria-labelledby="exampleModalLabel"
+              aria-hidden="true"
+            >
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title text-dark" id="exampleModalLabel">
+                      Purchase
+                    </h5>
+                    <button
+                      type="button"
+                      class="btn-close"
+                      data-bs-dismiss="modal"
+                      aria-label="Close"
+                    ></button>
+                  </div>
+                  <div class="modal-body text-dark">
+                    <p>Do You want to Honda CBR 300R</p>
+                    <p>Power: 19 kW (26 hp) @ 8,500 rpm</p>
+                    <p>
+                      Torque: 27 N⋅m (20 lb⋅ft) @ 7,250 rpm (claimed) Engine:
+                      286
+                    </p>
+                    <p>cc (17.5 cu in) single</p>
+                  </div>
+                  <div class="modal-footer">
+                    <button
+                      type="button"
+                      class="btn btn-dark text-white"
+                      data-bs-dismiss="modal"
+                    >
+                      Close
+                    </button>
+                    <button type="button" class="btn link-btn text-white">
+                      Buy now
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-12 col-md-6 col-lg-6">
+            <img
+              class="w-100 pt-5 pt-sm-5 pt-md-0"
+              src="./images/header-bike.png"
+              alt=""
+            />
+          </div>
+        </div>
+      </section>
+    </header>
+    <!-- main section -->
+    <main>
+      <!-- featured bike section -->
+      <section class="container pt-5">
+        <div class="text-center mb-5">
+          <h1 class="title">Fetured Bikes 2021</h1>
+          <span class="span-font-size coustom-color">Best bike collection</span>
+        </div>
+        <div class="row">
+          <div class="col-sm-12 col-md-4 col-lg-4">
+            <img
+              class="w-100 fetured-img my-4 my-sm-4 my-md-0"
+              src="./images/feature-bike.jpg"
+              alt=""
+            />
+          </div>
+          <div class="col-sm-12 col-md-4 col-lg-4">
+            <img
+              class="w-100 my-4 my-sm-4 my-md-0"
+              src="./images/feature-bike.jpg"
+              alt=""
+            />
+          </div>
+          <div class="col-sm-12 col-md-4 col-lg-4">
+            <img
+              class="w-100 fetured-img my-4 my-sm-4 my-md-0"
+              src="./images/feature-bike.jpg"
+              alt=""
+            />
+          </div>
+        </div>
+      </section>
+      <!-- reviews section -->
+      <section class="container">
+        <h1 class="text-center pb-5">
+          <span class="section-title-span">Happy</span
+          ><span class="coustom-color"> Client Says</span>
+        </h1>
+        <div
+          class="row row-cols-1 row-cols-md-3 text-center gy-4 gx-md-5 gx-sm-3"
+        >
+          <div class="col">
+            <div class="review card h-100">
+              <img
+                src="./images/user-1.png"
+                class="card-img-top review-img mx-auto"
+                alt="..."
+              />
+              <div class="card-body pt-4 p-0">
+                <p class="card-text">
+                  We've seen amazing results already. It really saves me time
+                  and effort. Best Product ever !!.Thanks a lot.
+                </p>
+              </div>
+              <div class="card-footer bg-white border-0 p-0 pt-3">
+                <i class="fas fa-star coustom-color"></i>
+                <i class="fas fa-star coustom-color"></i>
+                <i class="fas fa-star coustom-color"></i
+                ><i class="fas fa-star-half-alt coustom-color"></i>
+                <i class="far fa-star coustom-color"></i>
+                <p class="py-3">
+                  <a href="" class="text-decoration-none text-primary"
+                    >Md Hassan</a
+                  >
+                </p>
+                <h6>Banker</h6>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="review card h-100">
+              <img
+                src="./images/user-2.png"
+                class="card-img-top review-img mx-auto"
+                alt="..."
+              />
+              <div class="card-body pt-4 p-0">
+                <p class="card-text">
+                  Ever! I like your Shop more and more each day because it makes
+                  my life a lot easier.thaks a lot
+                </p>
+              </div>
+              <div class="card-footer bg-white border-0 p-0 pt-3">
+                <i class="fas fa-star coustom-color"></i>
+                <i class="fas fa-star coustom-color"></i>
+                <i class="fas fa-star coustom-color"></i>
+                <i class="fas fa-star coustom-color"></i>
+                <i class="far fa-star coustom-color"></i>
+                <p class="py-3">
+                  <a href="" class="text-decoration-none text-primary"
+                    >Md Hassan</a
+                  >
+                </p>
+                <h6>Banker</h6>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="review card h-100">
+              <img
+                src="./images/user-3.png"
+                class="card-img-top review-img mx-auto"
+                alt="..."
+              />
+              <div class="card-body pt-4 p-0">
+                <p class="card-text">
+                  You guys rock! I would like to personally thank you for your
+                  outstanding product.
+                </p>
+              </div>
+              <div class="card-footer bg-white border-0 p-0 pt-3">
+                <i class="fas fa-star coustom-color"></i>
+                <i class="fas fa-star coustom-color"></i>
+                <i class="fas fa-star coustom-color"> </i>
+                <i class="fas fa-star-half-alt coustom-color"></i>
+                <i class="far fa-star coustom-color"></i>
+                <p class="py-3">
+                  <a href="" class="text-decoration-none text-primary"
+                    >Md Hassan
+                  </a>
+                </p>
+                <h6>Banker</h6>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- faq section -->
+      <section class="container">
+        <h1 class="text-center pb-5">
+          <span class="section-title-span">Frequently Asked </span
+          ><span class="coustom-color">Qustions</span>
+        </h1>
+        <div class="row pt-md-4">
+          <div class="col-sm-12 col-md-6 col-lg-6">
+            <img class="w-100" src="./images/faq.png" alt="" />
+          </div>
+          <div class="col-sm-12 col-md-6 col-lg-6">
+            <div class="accordion mt-sm-5 mt-md-0" id="accordionExample">
+              <div class="accordion-item my-4">
+                <h2 class="accordion-header" id="headingOne">
+                  <button
+                    class="accordion-button"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#collapseOne"
+                    aria-expanded="true"
+                    aria-controls="collapseOne"
+                  >
+                    What are the most important things I should know about
+                    riding a bike?
+                  </button>
+                </h2>
+                <div
+                  id="collapseOne"
+                  class="accordion-collapse collapse show"
+                  aria-labelledby="headingOne"
+                  data-bs-parent="#accordionExample"
+                >
+                  <div class="accordion-body">
+                    Safety First! Always obey the rules of the road. Obey all
+                    traffic signals, signs, and laws. Get in the mindset of
+                    “driving” your bike—not just “riding” your bike. This will
+                    help you be a more focused and legally compliant bike rider.
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item my-4">
+                <h2 class="accordion-header" id="headingTwo">
+                  <button
+                    class="accordion-button collapsed"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#collapseTwo"
+                    aria-expanded="false"
+                    aria-controls="collapseTwo"
+                  >
+                    How can I tell if my helmet is old and I need a new one?
+                  </button>
+                </h2>
+                <div
+                  id="collapseTwo"
+                  class="accordion-collapse collapse"
+                  aria-labelledby="headingTwo"
+                  data-bs-parent="#accordionExample"
+                >
+                  <div class="accordion-body">
+                    Bear in mind that if the helmet did its job most people
+                    would tell you that they did not even hit their head, or did
+                    not hit their head that hard. And the thin shells on most
+                    helmets now tend to hide any dents in the foam. But if you
+                    can see marks on the shell or measure any foam crush at all,
+                    replace the helmet.
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item my-4">
+                <h2 class="accordion-header" id="headingThree">
+                  <button
+                    class="accordion-button collapsed"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#collapseThree"
+                    aria-expanded="false"
+                    aria-controls="collapseThree"
+                  >
+                    My bike has been in storage is it safe to ride?
+                  </button>
+                </h2>
+                <div
+                  id="collapseThree"
+                  class="accordion-collapse collapse"
+                  aria-labelledby="headingThree"
+                  data-bs-parent="#accordionExample"
+                >
+                  <div class="accordion-body">
+                    If the battery in your car or bike is over three years old,
+                    chances are it won't be able to hold a charge for as long as
+                    it used to. If a car or bike is left unused for many weeks,
+                    the battery could die. ... To prevent this, if you know that
+                    the vehicle is not going to be used, one can disconnect the
+                    battery.
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item my-4">
+                <h2 class="accordion-header" id="headingThree">
+                  <button
+                    class="accordion-button collapsed"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#collapseThree"
+                    aria-expanded="false"
+                    aria-controls="collapseThree"
+                  >
+                    What rules should I follow when riding my bike?
+                  </button>
+                </h2>
+                <div
+                  id="collapseThree"
+                  class="accordion-collapse collapse"
+                  aria-labelledby="headingThree"
+                  data-bs-parent="#accordionExample"
+                >
+                  <div class="accordion-body">
+                    <strong> Ride</strong> on the right in the same direction as
+                    other vehicles. Go with the flow – not against it. Obey All
+                    Traffic Laws. A bicycle is a vehicle and you're a driver.
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- feature section -->
+      <section class="container">
+        <h1 class="text-center pb-5">
+          <span class="section-title-span">Our Awesome</span>
+          <span class="coustom-color">Features</span>
+        </h1>
+        <div class="row text-center">
+          <div class="col-sm-12 col-md-3 col-lg-3">
+            <div class="h-100 shadow-lg p-3 rounded-3">
+              <i class="fas fa-dollar-sign"></i>
+              <h4 class="mt-3">Great Value</h4>
+              <p>We offer competitive prices on over 100 million items.</p>
+            </div>
+          </div>
+          <div class="col-sm-12 col-md-3 col-lg-3">
+            <div class="h-100 shadow-lg p-3 rounded-3">
+              <i class="fas fa-shopping-cart"></i>
+              <h4 class="mt-3">Worldwide shopping</h4>
+              <p>
+                We ship to over 200 countries and regions, and our site comes in
+                12 languages.
+              </p>
+            </div>
+          </div>
+          <div class="col-sm-12 col-md-3 col-lg-3">
+            <div class="h-100 shadow-lg p-3 rounded-3">
+              <i class="fas fa-gift"></i>
+              <h4 class="mt-3">Free Shiping</h4>
+              <p>We Provide a Free Shiping Over 200 countries and regions</p>
+            </div>
+          </div>
+          <div class="col-sm-12 col-md-3 col-lg-3">
+            <div class="h-100 shadow-lg p-3 rounded-3">
+              <i class="far fa-credit-card"></i>
+              <h4 class="mt-3">Safe payment</h4>
+              <p>
+                Pay with the world’s most popular and secure payment methods.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- form section -->
+      <section class="container">
+        <h1 class="section-title text-center pb-5">
+          <span class="coustom-color">Contact</span> Us
+        </h1>
+        <div class="row">
+          <div class="col-sm-12 col-md-6 col-lg-6">
+            <form action="">
+              <input
+                class="form-control"
+                type="text"
+                name="name"
+                placeholder="Enter Your Name"
+              />
+              <input
+                class="form-control my-3"
+                type="text"
+                name="email"
+                placeholder="Enter Your Email"
+              />
+              <input
+                class="form-control my-3"
+                type="text"
+                placeholder="Enter You Subject"
+              />
+              <textarea
+                class="form-control my-3"
+                cols="30"
+                rows="10"
+                placeholder="Enter Your Messsage"
+              ></textarea>
+
+              <input
+                type="submit"
+                class="btn link-btn text-white"
+                value="Submit"
+              />
+            </form>
+          </div>
+          <div class="col-sm-12 col-md-6 col-lg-6">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29525.647248747213!2d91.79614823955076!3d22.326959599999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30acd9f222f53977%3A0x195fe8d30daf06a1!2sDaraz%20Commercial%20Hub%2C%20Chattogram!5e0!3m2!1sen!2sbd!4v1627509600407!5m2!1sen!2sbd"
+              class="w-100 border-0"
+              height="420"
+              allowfullscreen=""
+              loading="lazy"
+            ></iframe>
+          </div>
+        </div>
+      </section>
+    </main>
     <!-- bootstrap cdn for js -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
