--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-light">
+      <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
-          <a class="navbar-brand" href="#">Navbar</a>
+          <a class="navbar-brand" href="#"
+            ><span class="coustom-color">Honda</span>-Rcb</a
+          >
           <button
             class="navbar-toggler"
             type="button"
@@ -37,15 +39,21 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link active" href="#">Home</a>
+                <a class="nav-link active" href="#home">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
+                <a class="nav-link" href="#shop">Shop</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
+                <a class="nav-link" href="#feature">Features</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#contact">Contact</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link btn link-btn ms-4" href="#login">Login</a>
               </li>
             </ul>
           </div>
@@ -132,12 +140,12 @@
     <!-- main section -->
     <main>
       <!-- featured bike section -->
-      <section class="container pt-5">
+      <section class="container" id="shop">
         <div class="text-center mb-5">
-          <h1 class="title">Fetured Bikes 2021</h1>
+          <h1 class="title pb-3">Fetured Bikes 2021</h1>
           <span class="span-font-size coustom-color">Best bike collection</span>
         </div>
-        <div class="row">
+        <div class="row pt-md-5">
           <div class="col-sm-12 col-md-4 col-lg-4">
             <img
               class="w-100 fetured-img my-4 my-sm-4 my-md-0"
@@ -385,21 +393,21 @@
         </div>
       </section>
       <!-- feature section -->
-      <section class="container">
+      <section class="container" id="feature">
         <h1 class="text-center pb-5">
           <span class="section-title-span">Our Awesome</span>
           <span class="coustom-color">Features</span>
         </h1>
         <div class="row text-center">
-          <div class="col-sm-12 col-md-3 col-lg-3">
-            <div class="h-100 shadow-lg p-3 rounded-3">
+          <div class="col-sm-12 col-md-3 col-lg-3 my-3 my-sm-3 my-md-0">
+            <div class="h-100 shadow-lg border border-1 p-3 rounded-3">
               <i class="fas fa-dollar-sign"></i>
               <h4 class="mt-3">Great Value</h4>
               <p>We offer competitive prices on over 100 million items.</p>
             </div>
           </div>
-          <div class="col-sm-12 col-md-3 col-lg-3">
-            <div class="h-100 shadow-lg p-3 rounded-3">
+          <div class="col-sm-12 col-md-3 col-lg-3 my-3 my-sm-3 my-md-0">
+            <div class="h-100 shadow-lg border border-1 rounded-3 p-3">
               <i class="fas fa-shopping-cart"></i>
               <h4 class="mt-3">Worldwide shopping</h4>
               <p>
@@ -408,15 +416,15 @@
               </p>
             </div>
           </div>
-          <div class="col-sm-12 col-md-3 col-lg-3">
-            <div class="h-100 shadow-lg p-3 rounded-3">
+          <div class="col-sm-12 col-md-3 col-lg-3 my-3 my-sm-3 my-md-0">
+            <div class="h-100 shadow-lg p-3 rounded-3 bg-light border border-1">
               <i class="fas fa-gift"></i>
               <h4 class="mt-3">Free Shiping</h4>
               <p>We Provide a Free Shiping Over 200 countries and regions</p>
             </div>
           </div>
-          <div class="col-sm-12 col-md-3 col-lg-3">
-            <div class="h-100 shadow-lg p-3 rounded-3">
+          <div class="col-sm-12 col-md-3 col-lg-3 my-3 my-sm-3 my-md-0">
+            <div class="h-100 shadow-lg p-3 rounded-3 border border-1">
               <i class="far fa-credit-card"></i>
               <h4 class="mt-3">Safe payment</h4>
               <p>
@@ -427,7 +435,7 @@
         </div>
       </section>
       <!-- form section -->
-      <section class="container">
+      <section class="container" id="contact">
         <h1 class="section-title text-center pb-5">
           <span class="coustom-color">Contact</span> Us
         </h1>
@@ -468,7 +476,7 @@
           <div class="col-sm-12 col-md-6 col-lg-6">
             <iframe
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29525.647248747213!2d91.79614823955076!3d22.326959599999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30acd9f222f53977%3A0x195fe8d30daf06a1!2sDaraz%20Commercial%20Hub%2C%20Chattogram!5e0!3m2!1sen!2sbd!4v1627509600407!5m2!1sen!2sbd"
-              class="w-100 border-0"
+              class="w-100 border-0 mt-4 mt-sm-4 mt-md-0"
               height="420"
               allowfullscreen=""
               loading="lazy"
@@ -477,6 +485,10 @@
         </div>
       </section>
     </main>
+    <!-- footer start -->
+    <footer class="text-center">
+      <p class="coustom-color">Copyright &copy 2021 honda-rcb.com</p>
+    </footer>
     <!-- bootstrap cdn for js -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
