--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
     </main>
     <!-- footer start -->
     <footer class="text-center">
-      <p class="coustom-color">Copyright &copy 2021 honda-rcb.com</p>
+      <p class="coustom-color">Copyright &copy 2021 honda-rcb</p>
     </footer>
     <!-- bootstrap cdn for js -->
     <script
