--- a/index.html
+++ b/index.html
@@ -226,11 +226,11 @@
                 <i class="fas fa-star coustom-color"></i>
                 <i class="far fa-star coustom-color"></i>
                 <p class="py-3">
-                  <a href="" class="text-decoration-none text-primary"
-                    >Md Hassan</a
-                  >
+                  <a href="" class="text-decoration-none text-primary">
+                    Md Jallu
+                  </a>
                 </p>
-                <h6>Banker</h6>
+                <h6>Web Developer</h6>
               </div>
             </div>
           </div>
@@ -254,11 +254,11 @@
                 <i class="fas fa-star-half-alt coustom-color"></i>
                 <i class="far fa-star coustom-color"></i>
                 <p class="py-3">
-                  <a href="" class="text-decoration-none text-primary"
-                    >Md Hassan
+                  <a href="" class="text-decoration-none text-primary">
+                    MD Hablu
                   </a>
                 </p>
-                <h6>Banker</h6>
+                <h6>Programmer</h6>
               </div>
             </div>
           </div>
