--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
+    <!-- header start -->
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
